--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   -->
     
     <div class="p-5 bg-light mt-4 mb-4">
-      <h1 class="display-1 fw-bold text-center">RIGHT NOW !!</h1>
+      <h1 class="display-1 fw-bold text-center">VAS HAPPENIN !!</h1>
     </div>
 
     <div class="container">
